Added to ReadMe and html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nihil provident inventore ratione repudiandae quas! Nobis vitae iste itaque, ratione voluptates corporis delectus nam! Assumenda molestiae deleniti rem nemo labore?</p>
 </body>
 
 
